# libauto

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autorun  setup.py
apps/basics/: event-on-key-press.yaml
apps/bestbuy/: bestbuy-restock-monitor.yaml
apps/games/: dino-game.yaml
apps/office/: ocr-convert-PDF-to-text.yaml  search-keyword-in-multiple-PDFs.yaml  weather-forecast-notifier.yaml  wechat-monitor-group-message.yaml
apps/web/: monitor-anime-updates.yaml
apps/window/: screen-time-reminder.yaml  track-screen-time.yaml
docker/: README.md  docker-compose.yaml
docker/duckling/: Dockerfile  test.sh
docker/paddleOCR/: Dockerfile  test.py
docker/uiRec/: Dockerfile  requirements.txt  run_single.py  server.py  test.sh  test_speech.py  test_ui.py
docs/: TODOs.md  event.md  ext.md  isa.md  rpa.md  syn.md  tagon.md  window.md
libauto/: __init__.py  appdata.py  ops.py  runner.py
libauto/cmd/: ops.py
libauto/core/: config.py  context.py  event.py  eventProxy.py  runtime.py  task.py  taskSch.py
libauto/data/: ops.py
libauto/keyboard/: ops.py
libauto/store/: ops.py
libauto/system/: ops.py  parseMacPush.py  sysInfo.py  utilsParams.py  window.py
libauto/utils/: downloader.py  logger.py  privacy.py  user.py
libauto/web/: captcha.py  ops.py  proxy.py  webScraper.py
libauto/window/: ops.py
src/: hook.c  hook.h  main.cpp  system.hpp
tests/: selenium-wire.py  test_background_loop.py  test_draw_screen.py  test_event_monitor.py  test_hotkey_osx.py  test_io_hook.py  test_pynput.py  test_virtual_mouse.py  test_web_ops.py  web_test_case.py
(+12 files in other folders)
